example-pods.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-app
  namespace: default
  labels:
    app: example-app
spec:
  replicas: 2  # ✅ 여러 개의 Pod을 관리
  selector:
    matchLabels:
      app: example-app
  template:
    metadata:
      labels:
        app: example-app
    spec:
      containers:
        - name: example-app
          image: nginx
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: nginx-config-volume
              mountPath: /etc/nginx/conf.d
            - name: ebs-volume
              mountPath: /usr/share/nginx/html  # EBS 볼륨 마운트
      volumes:
        - name: nginx-config-volume
          emptyDir: {}
        - name: ebs-volume
          persistentVolumeClaim:
            claimName: example-app-pvc  # PVC 연결
