jenkins-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
  labels:
    app.kubernetes.io/name: jenkins
    app.kubernetes.io/component: jenkins-controller
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: jenkins
    app.kubernetes.io/component: jenkins-controller
  ports:
    - name: http
      port: 80
      targetPort: 8080
